--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,7 +35,7 @@
   "editor.cursorStyle": "block",
   //Controls whether `editor.tabSize` and `editor.insertSpaces` will be automatically detected when
   //a file is opened based on the file contents.
-  "editor.detectIndentation": false,
+  "editor.detectIndentation": true,
   //Controls the condition for turning on `Find in Selection` automatically.
   // never: Never turn on `Find in Selection` automatically (default).
   // always: Always turn on `Find in Selection` automatically.
@@ -137,7 +137,7 @@
   "files.autoSave": "afterDelay",
   //Controls the delay in milliseconds after which an editor with unsaved changes is saved
   //automatically. Only applies when `files.autoSave` is set to `afterDelay`.
-  "files.autoSaveDelay": 60000, //1 minute.
+  "files.autoSaveDelay": 5000, //5 seconds.
   //The default language identifier that is assigned to new files. If configured to
   //`${activeEditorLanguage}`, will use the language identifier of the currently active text
   //editor, if any.
