--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,7 +35,7 @@
   "editor.cursorStyle": "block",
   //Controls whether `editor.tabSize` and `editor.insertSpaces` will be automatically detected when
   //a file is opened based on the file contents.
-  "editor.detectIndentation": true,
+  "editor.detectIndentation": false,
   //Controls the condition for turning on `Find in Selection` automatically.
   // never: Never turn on `Find in Selection` automatically (default).
   // always: Always turn on `Find in Selection` automatically.
@@ -115,6 +115,8 @@
   //Controls the wrapping column of the editor when `editor.wordWrap` is `wordWrapColumn` or
   //`bounded`.
   "editor.wordWrapColumn": 100,
+  //Controls the indentation of wrapped lines. Can be one of 'none', 'same', or 'indent'.
+  "editor.wrappingIndent": "same",
   //Controls whether the Explorer should automatically reveal and select files when opening them.
   // true: Files will be revealed and selected.
   // false: Files will not be revealed and selected.
